yc-section > gap definition > tiny fix

--- a/themes/origins/assets/main.css
+++ b/themes/origins/assets/main.css
@@ -328,6 +328,9 @@ yc-section{
   padding-block-start:var(--section-space-top);
   padding-block-end:var(--section-space-bottom);
 }
+yc-section > *:not(:last-child){
+  margin-block-end:var(--gap-3xl);
+}
 yc-section[data-full]{
   padding-inline:0;
 }
@@ -335,7 +338,6 @@ yc-section yc-section-head{
   display:grid;
   grid-gap:var(--gap-md);
   gap:var(--gap-md);
-  margin-block-end:var(--gap-3xl);
 }
 yc-section yc-section-head[data-position$=left]{
   text-align:start;
