--- a/themes/origins/styles/base/_common.scss
+++ b/themes/origins/styles/base/_common.scss
@@ -169,6 +169,12 @@ yc-section {
   padding-block-start: var(--section-space-top);
   padding-block-end: var(--section-space-bottom);
 
+  > * {
+    &:not(:last-child) {
+      margin-block-end: var(--gap-3xl);
+    }
+  }
+
   &[data-full] {
     padding-inline: 0;
   }
@@ -176,7 +182,6 @@ yc-section {
   yc-section-head {
     display: grid;
     gap: var(--gap-md);
-    margin-block-end: var(--gap-3xl);
 
     &[data-position$="left"] {
       text-align: start;
